--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,8 @@
     <title>Fichier HTML</title>
     <h1>Test de GitHub</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, perspiciatis nisi porro animi deserunt, totam veniam dolorum ipsa nulla recusandae dolores exercitationem. Ut quibusdam molestias inventore cum, eligendi ullam fuga!</p>
+    <h2>This is version 2</h2>
+    <p>Text ici.</p>
 </head>
 <body>
     
